--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,34 @@
 Package: MNB
 Type: Package
-Title: Diagnostic Tools for a Multivariate Negative Binomial Model for Fitting Correlated Data with Overdispersion
-Version: 1.0.0
-Date: 2021-02-11
-Author: Jalmar Carrasco, Cristian Lobos, Lizandra Fabio
+Title: Diagnostic Tools for a Multivariate Negative Binomial Model 
+Version: 1.1.0
+Date: 2022-04-22
+Authors@R: c(person("Jalmar", "Carrasco", role = c("aut", "cre"),
+                     email = "carrascojalmar@gmail.com"),
+              person("Cristian", "Lobos", role = "aut"),
+              person("Lizandra", "Fabio", role = "aut"))
+Author: Jalmar Carrasco [aut, cre], 
+    Cristian Lobos [aut], 
+    Lizandra Fabio [aut]
 Maintainer: Jalmar Carrasco <carrascojalmar@gmail.com>
 Description: Diagnostic tools as residual analysis, global, 
     local and total-local influence for the multivariate model 
     from the random intercept Poisson generalized log gamma model 
-    are available in this packages. Including also, the estimation 
-    process by maximum likelihood method.
+    are available in this package. Including also, the estimation 
+    process by maximum likelihood method, for details see 
+    Fabio, L. F; Villegas, C. L.; Carrasco, J.M.F and de Castro, M. (2021) 
+    <doi:10.1080/03610926.2021.1939380>.
 License: GPL (>=2)
 LazyData: TRUE
 Imports:
     flexsurv,
     numDeriv,
     graphics,
+    methods,
 Suggests:
     stats,
+Depends: 
+    R (>= 3.5.0)
 NeedsCompilation: no
 RoxygenNote: 7.1.1
 Encoding: UTF-8
